name:                BombskellMan
version:             0.1.0.0
license-file:        LICENSE
author:              Thomas Wojcik, Niels Gaasbeek
maintainer:          t.wojcik2@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010